--- a/ReferenceType/ReferenceType.csproj
+++ b/ReferenceType/ReferenceType.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{16B7B457-7D2D-4A4C-9DE2-043599A1867F}</ProjectGuid>
+    <ProjectGuid>{855343DB-D520-45DF-86D8-269B44CECEC9}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IEnumerableCustomized</RootNamespace>
-    <AssemblyName>IEnumerableCustomized</AssemblyName>
+    <RootNamespace>ReferenceType</RootNamespace>
+    <AssemblyName>ReferenceType</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,9 +41,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MyCollection.cs" />
-    <Compile Include="MyGenCollection.cs" />
-    <Compile Include="MyIntList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
